# fluxion-lsp

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: document.rs  main.rs
tests/: test.py
vscode-client/: README.md  package-lock.json  package.json
vscode-client/src/: extension.ts
